--- a/src/components/css/AddCategory.css
+++ b/src/components/css/AddCategory.css
@@ -1,9 +1,9 @@
-.login {
+.category--form {
     height: 500px;
     display: flex;
 }
 
-.login--form {
+.add-category--form {
     margin: auto;
     padding: 10px;
     border: 1px solid #c9c9c9;
@@ -13,13 +13,13 @@
     display: block;
 }
 
-.login--form-label {
+.add-form-label {
     margin: 10px 0 5px 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;    
 }
 
-.login--form-input {
+.add--form-input {
     margin: 5px 0 10px 0;
     padding: 5px;
     border: 1px solid #bfbfbf;
@@ -28,7 +28,7 @@
     width: 100%;
 }
 
-.login--form-btn {
+.add--form-btn {
     margin: 10px 0 0 0;
     padding: 7px 10px;
     border: 1px solid #efffff;
@@ -39,4 +39,8 @@
     color: white;
     display: block;
     cursor: pointer;
+}
+
+.action--btn {
+    display: flex;
 }
