--- a/src/components/css/DetailCategory.css
+++ b/src/components/css/DetailCategory.css
@@ -1,9 +1,10 @@
 .category--form {
     height: 500px;
     display: flex;
+    flex-direction: column;
 }
 
-.add-category--form {
+.detail-category--form {
     margin: auto;
     padding: 10px;
     border: 1px solid #c9c9c9;
@@ -13,13 +14,13 @@
     display: block;
 }
 
-.add-form-label {
+.detail-form-label {
     margin: 10px 0 5px 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;    
 }
 
-.add--form-input {
+.detail--form-input {
     margin: 5px 0 10px 0;
     padding: 5px;
     border: 1px solid #bfbfbf;
@@ -28,22 +29,8 @@
     width: 100%;
 }
 
-.add--form-btn {
-    margin: 10px 0 0 0;
-    padding: 7px 10px;
-    border: 1px solid #efffff;
-    border-radius: 3px;
-    background: #3085d6;
-    width: 100%;
-    font-size: 15px;
-    color: white;
-    display: block;
-    cursor: pointer;
-}
-
-.action--btn {
+.detail-action--btn {
     display: flex;
-    margin: auto;
 }
 
 .logout-action--btn {
